# skimmer-for-linux

./: .gitignore  CLAUDE.md  README.md  meson.build
data/: cw-reader.md
docs/: SCOPE.md
ml/: eval_real.py  export_c.py  extract_runs.py  fist_synth.py  harvest_real.py  margin_sweep.py  train_ctc.py
src/: call_test.c  chan_test.c  cw_test.c  pane_test.c  rbn_test.c  reader_test.c  replay_main.c  split_test.c  spot_test.c  tci_probe_main.c  tci_test.c  wdsp_smoke.c
src/app/: main.c
src/engine/: callsign.c  callsign.h  channelizer.c  channelizer.h  cw_reader.c  cw_reader.h  decode.h  decode_cw.c  decode_cw.h  decode_cw_v2.c  pane_log.c  pane_log.h  pipeline.c  pipeline.h  rbn_feed.c  rbn_feed.h  spot_out.c  spot_out.h  station.c  station.h  tci_client.c  tci_client.h  tone_split.c  tone_split.h  wdsp_port.c
tools/: ab_spots.py
